argocd/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod2
  namespace: default
  labels:
    app: test
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "200m"
          memory: "256Mi"
  restartPolicy: Always
