argocd/app.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-httproute
  namespace: argocd
spec:
  parentRefs:
    - name: argo-gateway
      sectionName: http-8080
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 8080
